[package]
name = "healthchecker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = {version =  "0.11.11", features = ["blocking"]}
regex = "1"
dotenv = "0.15.0"
actix-web = "4"
tokio = { version = "1.21.2", features = ["full"] }
